# graph_hdc_public

./: .gitignore  CLAUDE.md  DEFOG.md  GUIDANCE_IDEA.md  IDEAS.md  LICENSE  PYCOMEX.md  PYCOMEX_BUG.md  README.md  REFACTOR_IDEA.md  REFACTOR_PLAN.md  REFACTOR_TESTS.md  RRWP.md  dfm_guidance.md  noxfile.py  pyproject.toml
data/: qm9_smiles.csv  small_molecules.csv
docs/: global_structure_encoding_proposals.md
experiments/color/: train_flow_edge_decoder.py  train_flow_edge_decoder__col.py  train_flow_edge_decoder__col__stream.py
experiments/configs/: README.md  qm9_flow.yaml  qm9_logp_regressor.yaml  qm9_qed_regressor.yaml  zinc_flow.yaml  zinc_logp_regressor.yaml  zinc_qed_regressor.yaml
experiments/decoding/: analyze_hdc_similarity.py  evaluate_fragment_streaming.py  evaluate_node_decoding.py  evaluate_rrwp_features.py  hdc_interpolation.py  predict_graph_from_edge.py  test_fingerprint_to_hdc.py  test_flow_edge_decoder.py  test_flow_edge_decoder__dataset.py  test_flow_edge_decoder_hdc.py  test_flow_edge_decoder_hdc_guided.py  train_fingerprint_to_hdc.py  train_flow_edge_decoder.py  train_flow_edge_decoder_streaming.py  train_transformer_edge_decoder.py
experiments/generation/: test_flow_matching.py  test_flow_matching_graph_stage.py  test_flow_matching_two_stages.py  train_density_nvp.py  train_flow_matching.py  train_flow_matching__graph.py  train_flow_matching__node.py
experiments/scripts/: evaluate_generation.py  run_optimization.py  run_retrieval_experiment.py  train_flow.py  train_regressor.py
graph_hdc/: __init__.py
graph_hdc/datasets/: __init__.py  mixed_streaming.py  qm9_smiles.py  streaming_fragments.py  streaming_small_molecules.py  utils.py  zinc_smiles.py
graph_hdc/domains/: __init__.py  base.py
graph_hdc/domains/color/: __init__.py  datasets.py  domain.py  generators.py  preprocessing.py
graph_hdc/domains/molecular/: __init__.py  chem.py  datasets.py  domain.py  encoders.py  helpers.py  metrics.py  preprocessing.py
graph_hdc/hypernet/: __init__.py  configs.py  correction_utils.py  decoder.py  encoder.py  feature_encoders.py  multi_hypernet.py  rrwp_hypernet.py  types.py
graph_hdc/models/: __init__.py  flow_edge_decoder.py  flow_matching.py  transformer_edge_decoder.py  translator_mlp.py
graph_hdc/models/flows/: __init__.py  density_nvp.py  real_nvp.py
graph_hdc/models/regressors/: __init__.py  property_regressor.py
graph_hdc/utils/: __init__.py  chem.py  compat.py  evaluator.py  experiment_helpers.py  helpers.py  nx_utils.py  rw_features.py  torchhd_patch.py
scripts/: fetch_small_molecules.py
tests/: __init__.py  conftest.py  test_brics_connectivity.py  test_codebook.py  test_color_generators.py  test_colored_graph_domain.py  test_compute_hdc_distance.py  test_domain_contract.py  test_encoding.py  test_enumerate_attachments.py  test_flow.py  test_flow_edge_decoder.py  test_flow_matching.py  test_generation.py  test_gpu.py  test_hypernet_explicit.py  test_molecular_domain.py  test_multi_hypernet.py  test_rrwp_hypernet.py  test_rw_features.py  test_small_molecule_streaming.py  test_smoke.py  test_streaming_fragments.py  test_strip_dummy_atoms.py  test_transformer_edge_decoder.py
tests/migration/: conftest.py  export_golden.py  test_codebook.py  test_edge_decoding.py  test_encoding.py  test_evaluator.py  test_flow_decoder.py  test_mol_to_data.py  test_node_decoding.py  test_rrwp.py
tests/migration/fixtures/: evaluator.json  node_decode_qm9.json  node_decode_zinc.json  rrwp.json
