[project]
name = "graph_hdc"
version = "0.1.0"
requires-python = ">=3.10"
description = "Graph HDC"
authors = [{ name = "Arvand Kaveh <arvand.kaveh@tuta.com>" }, { name = "Jonas Teufel <jonseb1998@gmail.com>" }]
license = { text = "MIT" }
readme = "README.md"

[tool.setuptools.packages.find]
include = ["graph_hdc*"]
exclude = ["tests*", "experiments*", "data*"]

[tool.pixi.workspace]
channels = ["conda-forge", "nvidia", "pyg", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.environments.cluster]
features = ["base"]
solve-group = "cpu"

[tool.pixi.environments.local]
features = ["base"]
solve-group = "cpu"

[tool.pixi.environments.local-gpu]
features = ["gpu"]
solve-group = "gpu"

# Base dependencies (CPU environment)
[tool.pixi.feature.base.dependencies]
python = "3.11.*"
pytorch = ">=2.5.1"
pytorch-lightning = ">=2.5.5"
numpy = ">=1.26.4,<2"
matplotlib = ">=3.9.1"
networkx = ">=3.5,<4"
scikit-learn = "*"
seaborn = ">=0.13.2"
ruff = ">=0.12.12,<0.13"
pytest = ">=8.4.2,<9"
torch-geometric = "*"
# Note: rdkit from pip (includes Contrib/SA_Score, conda version doesn't)

# Base feature pypi dependencies
[tool.pixi.feature.base.pypi-dependencies]
torch-hd = "==5.8.4"
normflows = ">=1.7.3"
fcd-torch = ">=1.0.7"
rdkit = ">=2024.0.0"
graph-hdc = { path = ".", editable = true }

# GPU feature: minimal conda deps, pytorch from pip
[tool.pixi.feature.gpu.dependencies]
python = "3.11.*"
pip = "*"
numpy = ">=1.26.4,<2"
matplotlib = ">=3.9.1"
networkx = ">=3.5,<4"
scikit-learn = "*"
seaborn = ">=0.13.2"
ruff = ">=0.12.12,<0.13"
pytest = ">=8.4.2,<9"
# Note: rdkit installed via pip in setup-gpu (pip version includes Contrib/SA_Score)

# GPU feature pypi dependencies - graph-hdc only (others installed via setup-gpu)
[tool.pixi.feature.gpu.pypi-dependencies]
graph-hdc = { path = ".", editable = true }

# GPU setup task - installs pytorch and all dependencies with CUDA 13.0
[tool.pixi.feature.gpu.tasks]
setup-gpu = """
pip install torch==2.9.0+cu130 torchvision==0.24.0+cu130 --index-url https://download.pytorch.org/whl/cu130 && \
pip install torch-geometric==2.6.1 pytorch-lightning==2.5.5 torchmetrics==1.8.2 && \
pip install torch-hd==5.8.4 normflows fcd-torch rdkit && \
echo 'GPU setup complete!'
"""
