[project]
name = "graph_hdc"
version = "0.1.0"
requires-python = ">=3.10"
description = "Graph HDC"
authors = [
    { name = "Arvand Kaveh", email = "arvand.kaveh@tuta.com" },
    { name = "Jonas Teufel", email = "jonseb1998@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "pytorch-lightning>=2.5.5",
    "torch-geometric>=2.6.0",
    "numpy>=1.26.4,<2",
    "matplotlib>=3.9.1",
    "networkx>=3.5,<4",
    "scikit-learn",
    "seaborn>=0.13.2",
    "torch-hd==5.8.4",
    "normflows>=1.7.3",
    "fcd-torch>=1.0.7",
    "rdkit>=2024.0.0",
    "defog",
    "pycomex",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.5.1",
    "torchvision>=0.20.0",
]
cuda = [
    "torch>=2.5.1",
    "torchvision>=0.20.0",
]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_hdc"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "experiments/",
    "data/",
]

# uv configuration for PyTorch CPU/CUDA handling
# Install with: uv sync --extra cpu   OR   uv sync --extra cuda
[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cuda" },
]
defog = { git = "https://github.com/the16thpythonist/DeFoG" }
pycomex = { git = "https://github.com/the16thpythonist/pycomex" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
